# djc_math

./: CMakeLists.txt  Config.hpp  Constants.hpp  LICENSE  Mat3.hpp  Mat4.hpp  README.md  Transform.hpp  Utils.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  common.hpp  compile.hpp  config.hpp  constants.hpp  djc_math.hpp  mat3.hpp  mat4.hpp  perlin.hpp  quaternion.hpp  tests.cpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
djc_math/: common.hpp  compile.hpp  conversion.hpp  djc_math.hpp  mat3.hpp  mat4.hpp  perlin.hpp  quaternion.hpp  transform.hpp  vec2.hpp  vec3.hpp  vec4.hpp
djc_math/inline/: common_inl.hpp  compile_inl.hpp  conversion_inl.hpp  mat3_inl.hpp  mat4_inl.hpp  perlin_inl.hpp  vec2_inl.hpp  vec3_inl.hpp  vec4_inl.hpp
inline/: Mat3.inl  Mat4.inl  Transform.inl  Utils.inl  Vec2.inl  Vec3.inl  Vec4.inl  common.inl  compile.inl  mat3_inl.hpp  mat4.inl  mat4_inl.hpp  quaternion_inl.hpp  transform_inl.hpp  vec2.inl  vec2_inl.hpp  vec3.inl  vec3_inl.hpp  vec4.inl  vec4_inl.hpp
unit_tests/: unit_tests.cpp  vec2_unit_tests.cpp  vec3_unit_tests.cpp
